[package]
name = "mutable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
int-enum = "0.5.0"
itertools = "0.10.5"
nannou = "0.18.1"
noise = "0.8.2"
rand = "0.8.5"
rayon = "1.7.0"
strum = "0.25.0"
strum_macros = "0.25.2"
